<resources>
    <string name="app_name">SoftServeCare</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you filled all fields.</string>
    <string name="signup_error_title">Error</string>
    <string name="signup_success">Account successfully created.\nYou can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password.</string>
    <string name="login_error_title">Error</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Signup</string>
    <string name="main_title">Surveys</string>

    <string name="action_done">Done</string>
    <string name="survey_not_filled">Please fill all fields</string>

</resources>
